force-app/main/default/objects/Account_Plan_Target__c/Account_Plan_Target__c.object-meta.xml
<CustomObject>
    <label>Account Plan Target</label>
    <nameField>
        <displayFormat>apt-{0000}</displayFormat>
        <label>Account Plan Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>