force-app/main/default/objects/Account_Plan_Target__c/fields/Account_plan_2_0__c.field-meta.xml
<CustomField>
    <fullName>Account_plan_2_0__c</fullName>
    <label>Account plan 2.0</label>
    <referenceTo>Account_plan_2_0__c</referenceTo>
    <relationshipLabel>Account Plan Targets</relationshipLabel>
    <relationshipName>Account_Plan_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>