force-app/main/default/objects/Account_Plan_Target__c/fields/Actual_Potential__c.field-meta.xml
<CustomField>
    <fullName>Actual_Potential__c</fullName>
    <label>Actual Potential</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>