force-app/main/default/objects/Account_Plan_Target__c/fields/Total_Market_Potential__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Potential__c</fullName>
    <label>Total Market Potential</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>