force-app/main/default/objects/Account_Plan_Target__c/fields/X2_Yr__c.field-meta.xml
<CustomField>
    <fullName>X2_Yr__c</fullName>
    <label>2 Yr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>